# cmake-test

1-多目录依赖关系构建/: CMakeLists.txt  README.md
1-多目录依赖关系构建/calc/: CMakeLists.txt  calc.c
1-多目录依赖关系构建/lib_add/: CMakeLists.txt
1-多目录依赖关系构建/lib_dec/: CMakeLists.txt  dec.c  dec.h
2-install安装/: CMakeLists.txt  README.md
2-install安装-1/: CMakeLists.txt  README.md  help.txt
2-install安装/calc/: CMakeLists.txt  calc.c
2-install安装/lib_add/: CMakeLists.txt
3-add_custom_command使用/: CMakeLists.txt  README.md
3-add_custom_command使用/calc/: CMakeLists.txt
3-add_custom_command使用/lib_add/: CMakeLists.txt
3-install安装-2/: CMakeLists.txt  README.md
3-install安装-2/calc/: CMakeLists.txt
3-install安装-2/lib_add/: CMakeLists.txt
4-可见性/: CMakeLists.txt  README.md  test.c
4-可见性/lib/: CMakeLists.txt  testlib.c  testlib.h
5-生成头文件和c文件/: CMakeLists.txt  gen.py  main.c
6-ubus编译例子/: CMakeLists-old.txt  README.md
ubus-sample/: CMakeLists.txt  README.md  main.c
